--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ HTML :
 			</li>
 		</ul>
 		
-		<div class="copyright"><blockquote><b>Alessio Gonzalez 03.02.2022</b></blockquote></div>
+		<div class="copyright"><blockquote><b><a href="https://github.com/Raidersfocus/">Alessio Gonzalez</a> 03.02.2022</b></blockquote></div>
 	</div>
 	</body>
 </html>
